# event-api/src/Controllers/Connection/ConnectionController.php
@@ -55,7 +55,6 @@ class ConnectionController extends AbstractController
         echo print_r($jwt->getPublicKey());
     }
 
-
     /**
      * @OA\Post(
      * path="/login",
@@ -69,6 +68,18 @@ class ConnectionController extends AbstractController
      * @OA\Response(
      * response="200",
      * description="Login to the API",
+     * headers={
+     *     @OA\Header(header="Access-Control-Allow-Origin", description="CORS header", @OA\Schema(type="string")),
+     *     @OA\Header(header="Access-Control-Allow-Methods", description="CORS header", @OA\Schema(type="string")),
+     *     @OA\Header(header="Access-Control-Allow-Headers", description="CORS header", @OA\Schema(type="string"))
+     * }
+     * )
+     * )
+     * @OA\Options(
+     * path="/login",
+     * @OA\Response(
+     * response="200",
+     * description="Preflight response",
      * headers={
      *     @OA\Header(header="Access-Control-Allow-Origin", description="CORS header", @OA\Schema(type="string")),
      *     @OA\Header(header="Access-Control-Allow-Methods", description="CORS header", @OA\Schema(type="string")),
